...
    <string name="action_settings">Configuraciones</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="userRegisteredLabelButton">Ya tengo cuenta en ABC</string>
    <string name="userUnRegisteredLabelButton">Registrarse</string>
    <string name="question_register_type_text">Como quieres registrarte?:</string>
    <string name="candidato_text">Candidato</string>
    <string name="empresa_text">Empresa Contratante</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="candidatos_text_apptopbar">Registro de candidatos</string>
    <string name="languageCurrent">Lenguaje seleccionado</string>
...
