...
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="@dimen/label_secondary_text_size"
            android:text="@string/technical_proof_result_instructions" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/technical_proof_result_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:background="@drawable/border_field"
            android:importantForAutofill="no"
            android:inputType="text"
...
                android:text="@string/confirm_message"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/technical_proof_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_layout_background"
                android:text="@string/cancel_message"
...
