<?xml version="1.0" encoding="utf-8"?>
<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shortlisted_list"
    android:name="com.example.abc_jobs_alpaca.ShortlistedCandidatesFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutManager="LinearLayoutManager"
    tools:context=".view.ShortlistedCandidatesFragment"
    tools:listitem="@layout/fragment_shortlisted_candidate_item" />
